

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-May-2010 Jean-Marie Simonet
$ Fixed some language strings

15-May-2010 Ron Severdia
# Fixed CSS issues with BlueStork
$ Corrected language strings
# Fixed UI exceptions
+ New BlueStork icons

15-May-2010 Chris Davenport
# Fix [20375] Undefined variable in com_admin
# Fixed bad translation of help key references in com_admin

15-May-2010 Mark Dexter
# Fixed issues with sample data (Elin Waring)
^ Added title and subtitle to the params (Angie Radtke)
^ Added joomla_logos (Angie Radtke)
# Updated language file (Angie Radtke)
# Deleted unused image (Angie Radtke)
# Fixed language string (Angie Radtke)
# Fixed problem with root category description [#20296] (Elin Waring)
# More sample data fixes (Elin Waring)

15-May-2010 Christophe Demko
 ^ Consolidate JHtmlJGrid functions
 ^ Consolidate icons and hathor template

15-May-2010 Jean-Marie Simonet
$ Added missing string
^ Changed id to author name in edit icon overlib
$ Consolidated string
# Fixed language saving bug in com_contacts
^ Implemented JText::plural in mod_whosonline
$ Completed deleting legacy strings and sorting ini strings in files front-end [6]

15-May-2010 Sam Moffatt
 + Added setRedirect to JInstaller to permit extensions to flag that they want to redirect the user post install
 # Ensuring the new script tag permits the same features as the old com_install/com_uninstall triggers (e.g. can abort install on false)

14-May-2010 Mark Dexter
^ Minor tweak to beez_20 to fix Eclipse validation

14-May-2010 Christophe Demko
 + Enabling new icons in admin menu
 + Add a divider for checkin task
 + Consolidate checkin task
 + Add checkin task

14-May-2010 Jean-Marie Simonet