@@ -221,11 +221,11 @@ JGLOBAL_FIELD_PUBLISH_DOWN_DESC="An optional date to stop publishing"
 JGLOBAL_FIELD_PUBLISH_DOWN_LABEL="Publish Finish"
 JGLOBAL_FIELD_PUBLISH_UP_DESC="An optional date to start publishing"
 JGLOBAL_FIELD_PUBLISH_UP_LABEL="Publish Start"
-JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_LABEL="Description"
-JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_DESC="Description of the base category. Will override any category description."
+JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_LABEL="Show Base Category Description"
+JGLOBAL_FIELD_SHOW_BASE_DESCRIPTION_DESC="Show description of the base category or optionally override with the text from the description field."
 JGLOBAL_FIELD_CATEGORIES_CHOOSE_CATEGORY_LABEL="Select a base category"
 JGLOBAL_FIELD_CATEGORIES_CHOOSE_CATEGORY_DESC="Categories that are within this category will be displayed"
-JGLOBAL_FIELD_CATEGORIES_DESC_DESC="this "
+JGLOBAL_FIELD_CATEGORIES_DESC_DESC="If you enter some text in this field, it will override the Base Category Description."
 JGLOBAL_FIELD_CATEGORIES_DESC_LABEL="Base Category Description"
 JGLOBAL_FIELDSET_METADATA="Metadata"
 JGLOBAL_FIELDSET_PUBLISHING="Publishing Information"
@@ -312,8 +312,6 @@ JGLOBAL_SELECT_ALLOW_DENY_GROUP="Change %s permission for %s group."
 JGLOBAL_SELECTION_INVERT="Toggle Selection"
 JGLOBAL_SHOW_AUTHOR_DESC="If set to Show, the Name of the article's Author will be displayed.  This a global setting but can be changed at the Category, Menu and Article levels."
 JGLOBAL_SHOW_AUTHOR_LABEL="Show Author"
-JGLOBAL_SHOW_BASE_DESCRIPTION_LABEL="Show Base Category Description"
-JGLOBAL_SHOW_BASE_DESCRIPTION_DESC="Show description of the base category or optionally override with the text from the description field."
 JGLOBAL_SHOW_CATEGORY_DESC="If set to Show, the title of the article&rsquo;s category will show."
 JGLOBAL_SHOW_CATEGORY_DESCRIPTION_DESC="Show or hide the description of the selected Category."
 JGLOBAL_SHOW_CATEGORY_DESCRIPTION_LABEL="Category Description"
