@@ -21,9 +21,19 @@ $pageClass = $this->params->get('pageclass_sfx');
 	<?php echo $this->escape($this->params->get('page_heading')); ?>
 </h1>
 <?php endif; ?>
-<?php if ($this->params->get('categories_desc')) : ?>
-	<?php echo JHtml::_('content.prepare', $this->params->get('categories_desc')); ?>
-<?php endif; ?>
+<?php if ($this->params->get('show_base_description')) : ?>
+	<?php 	//If there is a description in the menu parameters use that; ?>
+		<?php if($this->params->get('categories_description')) : ?>
+			<?php echo  JHtml::_('content.prepare',$this->params->get('categories_description')); ?>
+		<?php  else: ?>
+			<?php //Otherwise get one from the database if it exists. ?>
+			<?php  if ($this->parent->description) : ?>
+				<div class="category-desc">
+					<?php  echo JHtml::_('content.prepare', $this->parent->description); ?>
+				</div>
+			<?php  endif; ?>
+		<?php  endif; ?>	
+	<?php endif; ?>
 <?php
 echo $this->loadTemplate('items');
 ?>
