@@ -28,6 +28,9 @@ $ -> Language fix or change
 ! -> Note
 
 16-May-2010 Jean-Marie Simonet
+^ Fixed Beez sitedescription
+$ Fixed and consolidate some language strings
+# Fixed base category description [20447]. Thanks Elin.
 $ Fixed some language strings
 
 15-May-2010 Ron Severdia
